--- a/index.html
+++ b/index.html
@@ -1007,5 +1007,9 @@
         window.generateUsernames = generateUsernames;
         
     </script>
+    <!-- Na końcu body, PRZED zamknięciem </body> -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="js/auth.js"></script>
+    
 </body>
 </html>
